<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FocusGuard</string>
    <string name="overlay_title">Tempo esgotado</string>
    <string name="overlay_message">Você passou do limite de %1$d min por desbloqueio na janela \"%2$s\".</string>
    <string name="overlay_elapsed_label">Tempo neste desbloqueio</string>
    <string name="overlay_ignore">Ignorar</string>
    <string name="overlay_free">Estou com tempo livre</string>
    <string name="free_question">Quanto tempo livre você tem agora?</string>
    <string name="free_custom_hint">Outro valor (min)</string>
    <string name="free_go">Ver sugestões</string>
    <string name="free_back">Voltar</string>
    <string name="free_start">Começar (o alerta volta em %1$s)</string>
    <string name="overlay_snooze">Continuar por mais %1$d min</string>
</resources>
